--- a/src/Pusula.InternManagement.Web/Pages/Interns/CreateModal.cshtml
+++ b/src/Pusula.InternManagement.Web/Pages/Interns/CreateModal.cshtml
@@ -17,8 +17,10 @@
                 <abp-tab title="@L["Intern"]" class="mt-3">
                     <div id="intern-information-wrapper">
                         <abp-input asp-for="Intern.Name" label="@L["Name"]" />
+                        <abp-input asp-for="Intern.Surname" label="@L["Surname"]"/>
                         <abp-input asp-for="Intern.PhoneNumber" label="@L["PhoneNumber"]" />
-                        <abp-input asp-for="Intern.Email" label="@L["Email"]" />
+                        <abp-input asp-for="Intern.Email" label="@L["Email"]"/>
+                        <abp-input asp-for="Intern.Password" label="@L["Password"]" />
                         <abp-input asp-for="Intern.StartDate" label="@L["StartDate"]" />
                         <abp-input asp-for="Intern.EndDate" label="@L["EndDate"]" />
                     </div>
