--- a/src/Pusula.InternManagement.Web/Pages/Interns/Intern.cshtml
+++ b/src/Pusula.InternManagement.Web/Pages/Interns/Intern.cshtml
@@ -25,7 +25,7 @@
 <abp-card>
     <abp-card-header class="text-center">
         <div class="m-3 h2">
-            <abp-card-title>@Model.Intern.Name</abp-card-title>
+            <abp-card-title>@Model.Intern.Name @Model.Intern.Surname</abp-card-title>
             <abp-card-subtitle>@Model.Intern.DepartmentName</abp-card-subtitle>
         </div>
     </abp-card-header>
