--- a/src/Pusula.InternManagement.Web/Pages/Interns/Intern.cshtml
+++ b/src/Pusula.InternManagement.Web/Pages/Interns/Intern.cshtml
@@ -79,7 +79,7 @@
                         @if (currentWeekWorks.Count == 0)
                         {
                             <hr />
-                            <p>No works for this week.</p>
+                            <p>@L["NoWorksForThisWeek"]</p>
                         }
                         else
                         {
@@ -114,7 +114,7 @@
             <div class="d-flex flex-row mx-3">
                 @if (!Model.Intern.Educations.Any())
                 {
-                    <abp-card-title>Education information for the intern could not be found!!!</abp-card-title>
+                    <abp-card-title>@L["EducationInformationForTheInternCouldNotBeFound"]</abp-card-title>
                 }
                 @foreach (var education in Model.Intern.Educations)
                 {
@@ -160,7 +160,7 @@
             <div class="d-flex flex-row mx-3">
                 @if (!Model.Intern.Experiences.Any())
                 {
-                    <abp-card-title>Experience information for the intern could not be found!!!</abp-card-title>
+                    <abp-card-title>@L["ExperienceInformationForTheInternCouldNotBeFound"]</abp-card-title>
                 }
                 @foreach (var experience in Model.Intern.Experiences)
                 {
@@ -203,7 +203,7 @@
             <div class="d-flex flex-row mx-3">
                 @if (!Model.Intern.Projects.Any())
                 {
-                    <abp-card-title>Project information for the intern could not be found!!!</abp-card-title>
+                    <abp-card-title>@L["ProjectInformationForTheInternCouldNotBeFound"]</abp-card-title>
                 }
                 @foreach (var project in Model.Intern.Projects)
                 {
@@ -247,7 +247,7 @@
             <div class="d-flex flex-row mx-3">
                 @if (!Model.Intern.Courses.Any())
                 {
-                    <abp-card-title>Course information for the intern could not be found!!!</abp-card-title>
+                    <abp-card-title>@L["CourseInformationForTheInternCouldNotBeFound"]</abp-card-title>
                 }
                 @foreach (var course in Model.Intern.Courses)
                 {
@@ -281,7 +281,7 @@
             <div class="d-flex flex-row mx-3">
                 @if (!Model.Intern.Files.Any())
                 {
-                    <abp-card-title>File information for the intern could not be found!!!</abp-card-title>
+                    <abp-card-title>@L["FileInformationForTheInternCouldNotBeFound"]</abp-card-title>
                 }
                 @foreach (var file in Model.Intern.Files)
                 {
