--- a/src/Pusula.InternManagement.Web/Pages/Experiences/CreateModal.cshtml
+++ b/src/Pusula.InternManagement.Web/Pages/Experiences/CreateModal.cshtml
@@ -1,9 +1,12 @@
 ﻿@page
+@using Microsoft.AspNetCore.Authorization;
 @using Microsoft.Extensions.Localization;
 @using Pusula.InternManagement.Localization;
+@using Pusula.InternManagement.Permissions;
 @using Volo.Abp.AspNetCore.Mvc.UI.Bootstrap.TagHelpers.Modal;
 @model Pusula.InternManagement.Web.Pages.Experiences.CreateModalModel
 @inject IStringLocalizer<InternManagementResource> L
+@inject IAuthorizationService AuthorizationService
 @{
     Layout = null;
 }
@@ -24,11 +27,14 @@
                         <abp-input asp-for="Experience.EndDate" label="@L["EndDate"]" />
                     </div>
                 </abp-tab>
-                <abp-tab title="@L["Intern"]" class="mt-3">
-                    <div id="interns-list-wrapper">
-                        <abp-select asp-for="Experience.InternId" label="@L["Intern"]" />
-                    </div>
-                </abp-tab>
+                @if (await AuthorizationService.IsGrantedAsync(InternManagementPermissions.Experiences.Admin))
+                {
+                    <abp-tab title="@L["Intern"]" class="mt-3">
+                        <div id="interns-list-wrapper">
+                            <abp-select asp-for="Experience.InternId" label="@L["Intern"]" />
+                        </div>
+                    </abp-tab>
+                }
             </abp-tabs>
         </abp-modal-body>
         <abp-modal-footer buttons="@(AbpModalButtons.Cancel|AbpModalButtons.Save)"></abp-modal-footer>
