--- a/src/Pusula.InternManagement.Web/Pages/Projects/EditModal.cshtml
+++ b/src/Pusula.InternManagement.Web/Pages/Projects/EditModal.cshtml
@@ -1,9 +1,12 @@
 ﻿@page
+@using Microsoft.AspNetCore.Authorization;
 @using Microsoft.Extensions.Localization;
 @using Pusula.InternManagement.Localization;
+@using Pusula.InternManagement.Permissions;
 @using Volo.Abp.AspNetCore.Mvc.UI.Bootstrap.TagHelpers.Modal;
 @model Pusula.InternManagement.Web.Pages.Projects.EditModalModel
 @inject IStringLocalizer<InternManagementResource> L
+@inject IAuthorizationService AuthorizationService
 @{
     Layout = null;
 }
@@ -21,17 +24,20 @@
                         <abp-input asp-for="Project.EndDate" label="@L["EndDate"]" />
                     </div>
                 </abp-tab>
-                <abp-tab title="Interns">
-                    <div id="intern-list-wrapper" class="mt-3">
-                        @for (var i = 0; i < Model.Interns.Count; i++)
-                        {
-                            var intern = Model.Interns[i];
-                            var fullname = $"{intern.Name} {intern.Surname}";
-                            <abp-input abp-id-name="@Model.Interns[i].IsSelected" asp-for="@intern.IsSelected" label="@fullname" />
-                            <input abp-id-name="@Model.Interns[i].Name" asp-for="@intern.Name" />
-                        }
-                    </div>
-                </abp-tab>
+                @if (await AuthorizationService.IsGrantedAsync(InternManagementPermissions.Projects.Admin))
+                {
+                    <abp-tab title="@L["Interns"]">
+                        <div id="intern-list-wrapper" class="mt-3">
+                            @for (var i = 0; i < Model.Interns.Count; i++)
+                            {
+                                var intern = Model.Interns[i];
+                                var fullname = $"{intern.Name} {intern.Surname}";
+                                <abp-input abp-id-name="@Model.Interns[i].IsSelected" asp-for="@intern.IsSelected" label="@fullname" />
+                                <input abp-id-name="@Model.Interns[i].Name" asp-for="@intern.Name" />
+                            }}
+                        </div>
+                    </abp-tab>
+                }
             </abp-tabs>
         </abp-modal-body>
         <abp-modal-footer buttons="@(AbpModalButtons.Cancel|AbpModalButtons.Save)"></abp-modal-footer>
